@@ -19,7 +19,6 @@ import java.math.BigInteger;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -111,7 +110,7 @@ public class MetadataStateDescriptionFragmentProvider implements StateDescriptio
                                 } else {
                                     return new StateOption(o.trim(), null);
                                 }
-                            }).collect(Collectors.toList());
+                            }).toList();
                     builder.withOptions(stateOptions);
                 }
 
